--- a/Lesson 3/css/main.css
+++ b/Lesson 3/css/main.css
@@ -1,75 +1,57 @@
-.container {
-    display: flex;
+.cards {
     height:100vh;
-    flex-direction: row;
+    display: flex;
     justify-content: space-around;
     align-items: center;
 }
 
-.container div {
-    padding: 40px;
-    background: #333;
-    color: #fff;
+.cards.horizontal-block {
+    flex-direction: column;
+}
+
+.cards.vertical-block {    
+    flex-direction: row;
+}
+
+.cards div {
+    margin:1px;
+    padding: 20px;
+    padding-top:40px;
     position: relative;
-    border-radius: 10px;
+    border-radius: 5px;
+    border: 1px #424242 solid;
+    background: #FAFAFA;
+    width:35px;
+    height:60px;
+    font-size:30px;
+    text-align: center;
     
 }
 
-.container div:first {
-    padding: 40px;
-    background: #333;
-    color: #fff;
+.cards div:before{
+    position: absolute;
+    top:1;
+    left:5;
+    font-size: 30px;
 }
+
+.cards div:after{
+    position: absolute;
+    bottom:1;
+    right:5;
+    font-size: 30px;
+    transform: rotate(180deg);
+}
+
 /*
-.container div.el-2 {
-    flex-grow: 1;
-}
-
-.container div.el-3 {
-    align-self: flex-start;
-}
-*/
-
-.container div:nth-child(3) {
-    align-self: flex-start;
-    
-}
-
-.container div:nth-child(even) {
+.cards div:nth-child(1){
     background: #a5d6a7;
 }
 
-.container div:nth-child(odd) {
+.cards div:nth-child(2n){
     background: #b39ddb;
 }
 
-.container div:nth-child(odd)::before {
-    background: #673ab7;
+.cards div:last-child, .cards div:first-child{
 }
-
-.container div:nth-child(even)::before {
-    background: #357a38;
-}
-
-
-.container div:before {
-    content:'';
-    position: absolute;
-    bottom:10;
-    right:10;
-    height:20px;
-    width:20px;
-    border-radius: 50%;
-    background: #482880;
-}
-.container div:after {
-    content:'☺';
-    position: absolute;
-    top:10;
-    right:10;
-    height:20px;
-    width:20px;
-    border-radius: 10%;
-    background: #482880;
-}
-
+*/
