--- a/Lesson 4/css/main.css
+++ b/Lesson 4/css/main.css
@@ -1,17 +1,25 @@
 form {
-    max-width: 600px;
-    padding: 20px;
+    max-width: 400px;
+    padding: 30px 35px 45px;
+    margin: 50px auto;
+    border: 1px solid #ccc;
+    border-radius: 5px;
 }
 
 .form-group {
     margin-bottom: 15px;
 }
 
+
 label {
     display: block;
     font-family: sans-serif;
     text-transform: uppercase;
     margin-bottom: 3px;
+}
+
+.form-options label {
+    display: inline-block;
 }
 
 input {
@@ -22,9 +30,35 @@ input {
     text-indent: 10px;
 }
 
+input:not([value=""]) {
+    border: 1px solid #66BB6A;
+}
+
+input[type="radio"],
+input[type="checkbox"] {
+    height: 20px;
+    width: 20px;
+}
+
 select {
     width: 100%;
     height: 36px;
     border: 1px solid #ccc;
     border-radius: 3px;
+}
+
+
+.form-action{
+    text-align: center;
+}
+
+button {
+    background: #42A5F5;
+    color: #fff;
+    padding: 7px 45px;
+    text-transform: uppercase;
+    font-size: 16px;
+    margin-top: 16px;
+    border: none;
+    border-radius: 5px;
 }
