--- a/School105/Школа №105_files/main.css
+++ b/School105/Школа №105_files/main.css
@@ -4,6 +4,7 @@ body{
 }
 .page {
     font-family: Verdana;
+    min-width: 300px;
     max-width: 1033px;
     margin:auto;
     padding: 10px;
@@ -11,11 +12,11 @@ body{
     
 }
 
-.header {
+header {
     width:100%;
 }
 
-.header p{
+header p{
     text-align: right;    
     border-bottom: 1px solid #D7CCC8;
     padding-bottom:10px;
@@ -23,23 +24,51 @@ body{
     font-size: 12px;
 }
 
-.header a{    
+header a{    
     width:100%;
 }
 
-.header img {
-    width:100%;
-    min-width: 600px;    
+header img {
+    width:100%;   
     border-bottom: 3px solid #D7CCC8;
     padding-bottom:3px;
     border-radius: 3px;
 }
 
+main{
+    display:flex;
+}
+
+@media only screen and (max-width: 765px) {
+	main {
+        flex-direction: column-reverse;
+    }
+    .navigation{
+        display: none;
+    }
+    .banners {
+        display: flex;
+        align-content: stretch;
+    }
+}
+
+@media only screen and 
+(min-width: 768px)and (max-width: 1024px) {
+}
+
+
+@media only screen and 
+(min-width: 1024px) {
+}
+
+
+
 .navigation {
-    min-width: 200px;    
-    max-width: 300px;    
+    min-width: 200px;
+    max-width: 300px;
     background-color: #F9FBE7;
-    padding: 10px 3px;
+    padding-top: 5px;
+    padding-bottom: 5px;
     margin: 10px 0px;
     border-radius: 3px;
 }
@@ -49,7 +78,7 @@ body{
     padding: 4px;
     list-style: none;
     background-color: #F0F4C3;
-    margin: 4px;
+    margin: 6px;
     font-size: 12px;
     color: #6D4C41;
     text-decoration: none;
@@ -58,10 +87,58 @@ body{
 }
 
 .navigation a:hover{
-    color2:#43A047;
     background-color: #E6EE9C;
 }
 
-.navigation a:active{
-    color:#43A047;    
+.banners{
+    max-width: 300px;
+}
+
+.banner{
+    display: block;
+    margin:0px;
+    text-align: center; 
+    font-weight: bold;
+    background-color: #FFF9C4;
+    border-radius: 3px;
+    padding: 2px 5px 5px 5px;
+    margin-bottom: 5px;
+    color: #5D4037;
+    text-decoration: none;
+}
+
+.banner p {
+    font-size: 12px;
+}
+.banner img{
+    width:100%;
+}
+
+.content{
+    margin-bottom: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+    font-size: 12px;
+}
+
+.content h2{
+    border-bottom: 1px solid #D7CCC8;
+    padding-bottom: 3px;
+    color: #3E2723;  
+}
+
+
+footer {
+    border-top: 3px solid #D7CCC8;
+    font-size: 8px;
+    display: flex;    
+    justify-content: center;
+    color: #5D4037;
+}
+footer a{
+    color: #5D4037;    
+}
+
+footer p{
+    margin:5px;    
 }
