--- a/Lesson 4/css/main.css
+++ b/Lesson 4/css/main.css
@@ -62,3 +62,17 @@ button {
     border: none;
     border-radius: 5px;
 }
+
+body {
+    padding: 0;
+    margin: 0;    
+}
+
+.footer {
+    position: fixed;
+    bottom: 0;
+    background-color: #E0F7FA;
+    width:100%;
+    padding: 10px;
+    margin: 0px;
+}
